syntax = "proto3";

package proto;

option java_package = "org.app.order";
option java_outer_classname = "OrderServiceProto";

message OrderRequest {
  string productId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string confirmation = 1;
}

service OrderService {
  rpc CalculateTotal(OrderRequest) returns (OrderResponse);
}
